# sari-data-pipeline

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  test.ipynb
benchmarks/: benchmark_data.json
example_data/: example_data.jsonl
notebooks/: test.ipynb
src/: config.py  data_handler.py  data_schema.py  data_utils.py  decontamination.py  my_logging.py  preprocessing.py
